--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+    "isolatedModules": false
+  },
   },
   "include": [
     "src"
