--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19",
     "zustand": "^4.3.8"
   },
   "scripts": {
